<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#061a23"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


<!--    <dmax.dialog.ProgressLayout-->
<!--        android:id="@+id/load"-->
<!--        android:visibility="gone"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:theme="@style/Custom"-->
<!--        android:layout_height="wrap_content"/>-->
    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/image_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/scroller"
        android:scaleType="centerCrop" />
<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/rvFilterView"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:background="@color/white"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_above="@+id/scroller"-->
<!--        -->
<!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--        tools:listitem="@layout/row_filter_view" />-->

    <ImageView
        android:id="@+id/image_main"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        android:contentDescription="@string/main_image"
        android:scaleType="centerCrop"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_btn"
        android:layout_width="150dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scroller"
        android:layout_centerInParent="true"
        android:alpha="0.50"
        android:background="@drawable/round_button"
        android:text="@string/reset"
        android:focusable="true" />
    <HorizontalScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="#7e7e7e">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_filters"
                android:layout_width="@dimen/card_view_size"
                android:layout_height="@dimen/card_view_size"
                app:cardCornerRadius="10dp"
                android:elevation="10dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="@dimen/padding_size"
                app:cardBackgroundColor="@color/color_background_card"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_image_yellow_24dp"
                        android:contentDescription="@string/filters_desc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filters"
                        android:textColor="#49b265"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_edit"
                android:layout_width="@dimen/card_view_size"
                android:layout_height="@dimen/card_view_size"
                android:layout_marginStart="8dp"
                app:cardCornerRadius="10dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:elevation="10dp"
                android:padding="@dimen/padding_size"
                app:cardBackgroundColor="@color/color_background_card"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_edit_yellow_24dp"
                        android:contentDescription="@string/edit_desc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:textColor="@color/yellow"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/btn_rotate"-->
<!--                android:layout_width="@dimen/card_view_size"-->
<!--                android:layout_height="@dimen/card_view_size"-->
<!--                android:layout_marginStart="8dp"-->
<!--                app:cardCornerRadius="10dp"-->
<!--                android:elevation="10dp"-->
<!--                android:padding="@dimen/padding_size"-->
<!--                app:cardBackgroundColor="@color/color_background_card">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center_horizontal|center_vertical"-->
<!--                    android:orientation="vertical"-->
<!--                    tools:ignore="UseCompoundDrawables">-->

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center_horizontal"-->
<!--                        android:src="@drawable/ic_baseline_rotate_right_24"-->
<!--                        android:contentDescription="@string/rota" />-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/rota"-->
<!--                        android:textColor="@color/yellow"-->
<!--                        android:textSize="18sp"-->
<!--                        android:textStyle="bold" />-->
<!--                </LinearLayout>-->

<!--            </androidx.cardview.widget.CardView>-->

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_brush"
                app:cardCornerRadius="10dp"
                android:elevation="10dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_width="@dimen/card_view_size"
                android:layout_height="@dimen/card_view_size"
                android:layout_marginStart="8dp"
                android:padding="@dimen/padding_size"
                app:cardBackgroundColor="@color/color_background_card"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_brush_yellow_24dp"
                        android:contentDescription="@string/brush_desc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brush"
                        android:textColor="@color/yellow"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_emoji"
                app:cardCornerRadius="10dp"
                android:elevation="10dp"
                android:layout_width="@dimen/card_view_size"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_height="@dimen/card_view_size"
                android:layout_marginStart="8dp"
                android:padding="@dimen/padding_size"
                app:cardBackgroundColor="@color/color_background_card"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_emoji_yellow_24dp"
                        android:contentDescription="@string/emoji_desc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emoji"
                        android:textColor="@color/yellow"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_add_text"
                app:cardCornerRadius="10dp"
                android:elevation="10dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_width="@dimen/card_view_size"
                android:layout_height="@dimen/card_view_size"
                android:layout_marginStart="8dp"
                android:padding="@dimen/padding_size"
                app:cardBackgroundColor="@color/color_background_card"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_text_yellow_24dp"
                        android:contentDescription="@string/text_desc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text"
                        android:textColor="@color/yellow"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_add_image"
                android:layout_width="@dimen/card_view_size"
                app:cardCornerRadius="10dp"
                android:elevation="10dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_height="@dimen/card_view_size"
                android:layout_marginStart="8dp"
                android:padding="@dimen/padding_size"
                app:cardBackgroundColor="@color/color_background_card"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_broken_image_yellow_24dp"
                        android:contentDescription="@string/image_desc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image"
                        android:textColor="@color/yellow"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_add_frame"
                android:layout_width="@dimen/card_view_size"
                android:layout_height="@dimen/card_view_size"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:cardCornerRadius="10dp"
                android:elevation="10dp"
                android:layout_marginStart="8dp"
                android:padding="@dimen/padding_size"
                app:cardBackgroundColor="@color/color_background_card"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_filter_frames_yellow_24dp"
                        android:contentDescription="@string/frame_desc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frame"
                        android:textColor="@color/yellow"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_crop_image"
                android:layout_width="@dimen/card_view_size"
                android:layout_height="@dimen/card_view_size"
                android:layout_marginStart="8dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:cardCornerRadius="10dp"
                android:elevation="10dp"
                android:padding="@dimen/padding_size"
                app:cardBackgroundColor="@color/color_background_card"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_crop_yellow_24dp"
                        android:contentDescription="@string/crop_desc" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rotate_image"
                        android:textColor="@color/yellow"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crop_image"
                        android:textColor="@color/yellow"
                        android:textSize="14sp"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>